<resources>
    <string name="add_recyclerview">Add Recyclerview</string>
    <string name="add_data_screen">Add Data Screen</string>
    <string name="name_screen">Name Screen :</string>
    <string name="cover_open">Cover Open</string>
    <string name="add_new_item">Add New Item</string>
    <string name="wishlist">WishList</string>
    <string name="open">Open</string>
    <string name="list_item">List Item</string>
    <string name="add">Add</string>
    <string name="menu_list">Menu List</string>
    <string name="go_to_list_item">Go To List Item</string>
    <string name="add_series">Add Series</string>
    <string name="name">Name</string>
    <string name="volume">Volume</string>
    <string name="sum_volume">Sum Volume</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="already_end">Already End</string>
    <string name="go_to_my_item">Go To My Item</string>
    <string name="my_item">My Item</string>
</resources>