<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        >
        <ImageView
            android:id="@+id/btn_cancel_addingseries"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/title_medium_dark"
            android:gravity="center"
            android:text="@string/add_series"
            android:layout_marginBottom="16dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_name_addseries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:translationZ="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGreenTeal"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            style="@style/title_small_dark"
            android:text="@string/volume"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_removevolume_addseries"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                style="@style/ButtonSecondary"
                android:text="@string/minus"
                />
            <EditText
                android:id="@+id/et_volume_addseries"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                style="@style/desc_medium_dark"
                android:inputType="number"
                android:layout_weight="1"
                android:hint="@string/sum_volume"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_addvolume_addseries"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                style="@style/ButtonPrimary"
                android:text="@string/plus"
                />
        </LinearLayout>
        <ImageView
            android:id="@+id/iv_cover_series"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:src="@color/colorGreenTeal"
            />
        <Spinner
            android:id="@+id/spinner_itemtype_addseries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            />
        <CheckBox
            android:id="@+id/cb_isalreadyend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_end"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_addingseries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonPrimary"
            android:text="@string/add"
            />
    </LinearLayout>
</layout>
