<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.cupboardigi.ui.menu.list.MenuListViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/btn_gotolistitem"
            app:layout_constraintBottom_toBottomOf="@id/btn_gotolistitem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_gotolistitem"
            android:gravity="center"
            style="@style/title_medium_dark"
            android:text="@string/menu_list"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_gotolistitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"
            android:padding="10dp"
            style="@style/ButtonPrimary"
            android:text="@string/go_to_list_item"
            android:onClick="@{()-> viewModel.navigator.goToListItem()}"
            />
        <TextView
            android:id="@+id/tv_title_wishlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_gotolistitem"
            android:layout_marginTop="30dp"
            android:gravity="center"
            style="@style/title_small_dark"
            android:text="@string/wishlist"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_wishlist_menu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title_wishlist"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="20dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_addstorage_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"
            style="@style/ButtonPrimary"
            android:text="@string/add_new_item"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>