<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/title_medium_light"
            android:gravity="center"
            android:text="@string/add_data_screen"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/title_small_light"
                android:layout_gravity="center"
                android:text="@string/name_screen"
                />
            <EditText
                android:id="@+id/et_name_screen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/title_small_light"
                android:inputType="text"
                android:autofillHints=" "
                android:labelFor="@+id/et_name_screen"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                style="@style/title_small_light"
                android:layout_gravity="center"
                android:text="@string/cover_open"
                />
            <CheckBox
                android:id="@+id/cb_iscoveropen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel_addingscreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="15dp"
                style="@style/ButtonPrimary"
                android:text="Cancel"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_addingscreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="15dp"
                style="@style/ButtonSecondary"
                android:text="Add"
                />
        </LinearLayout>
    </LinearLayout>
</layout>